# hlsplay

./: CMakeLists.txt  hlsplay.kdev4
src/: hlsplay.cpp  hlsplay.h  hlsplay.ui  main.cpp  stream.cpp  stream.h  stream_p.h
